fix double scrollbar

--- a/sass/CTA.sass
+++ b/sass/CTA.sass
@@ -40,7 +40,7 @@
         height: 15%
         padding: 0 10em
         width: 100%
-        z-index: 10000
+        z-index: 9999
         .heart
             z-index: 1000
             position: absolute
